--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "wgenial/s3-objects-stream-zip-php",
-	"homepage": "https://github.com/wgenial/s3-objects-stream-zip-php",
-	"description": "S3ObjectsStreamZip is a PHP library to stream objects from AWS S3 as a zip file.",
+	"name": "spatialmedia/s3-objects-stream-zip-php",
+	"homepage": "https://github.com/spatialmedia/s3-objects-stream-zip-php",
+	"description": "Fork of S3ObjectsStreamZip",
 	"keywords": ["aws-s3","zip","compress","ziparchive","s3-bucket","s3-storage","amazon-s3-storage","amazon-s3", "aws-php-sdk"],
 	"type": "library",
 	"require": {
